--- a/student-management-ng7/src/index.html
+++ b/student-management-ng7/src/index.html
@@ -4,8 +4,9 @@
 <head>
   <meta charset="utf-8">
 
-  <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"></script>
+  <!-- <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"></script> -->
 
+  <!-- 
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
 
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
@@ -18,7 +19,15 @@
     href="https://www.jqueryscript.net/demo/Clean-jQuery-Date-Time-Picker-Plugin-datetimepicker/jquery.datetimepicker.css"
     rel="stylesheet">
   <script
-    src="https://www.jqueryscript.net/demo/Clean-jQuery-Date-Time-Picker-Plugin-datetimepicker/jquery.datetimepicker.js"></script>
+    src="https://www.jqueryscript.net/demo/Clean-jQuery-Date-Time-Picker-Plugin-datetimepicker/jquery.datetimepicker.js"></script> -->
+
+
+  <script src="\assets\js\path-data-polyfill.js"></script>
+
+  <!-- <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script> -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/raphael/2.3.0/raphael.js"></script>
+
+  <script type="text/javascript" src="\assets\js\free_transform.js"></script>
 
 
   <title>Ng7Template</title>
